# JazzyAPI

./: Readme.md  jazzyapi.db  package-lock.json  pyproject.toml  setup.py
JazzyAPI.egg-info/: PKG-INFO  SOURCES.txt
app/: main.py
app/api/auth/admin/: controllers.py  routes.py
app/api/email/: routes.py
app/api/products/: controllers.py  routes.py
app/core/: auth_core.py  config.py  email.py  oauth2.py  security.py
app/database/: __init__.py  config.py  database.py  models.py
app/database/models/: OAuth2Client.py  UserOAuth2.py  __init__.py  blacklisted_token.py  otp.py  products.py  user_log.py  users.py
app/helper/: date_formatter.py  file_helper.py  json_helper.py  math_helper.py  string_formatter.py  validators.py
app/schemas/: auth.py  product.py
app/scripts/: setup_oauth_clients.py
app/security/: authentication.py  encryption.py  hashing.py  jwt.py  token_management.py
app/utils/: api_util.py  crypto_util.py  email.py  email_utils.py  env_util.py  error_util.py  logging_util.py
env/: .env
tests/: OAuth2PasswordBearer.py  register_oauth_client.py  test_auth.py  test_email.py  test_main.py
