[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "JazzyAPI"
version = "1.0.0"
description = "JazzyAPI DummyAPI for Fake data testing ..."
authors = ["KEANGHOUR PHO <phokeanghour12@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"  # Adjust based on your Python version

[tool.poetry.dev-dependencies]
